# Fake-Audio-Detector

./: .gitignore  README.md  app.py  performance_report.md  predict.py  pyproject.toml  requirements.txt
models/: deepfake_cnn.pth  model_config.json
notebooks/: deepfake_audio_detection.ipynb
reports/: metrics.json
src/audio_detection/: __init__.py  config.py  data.py  evaluate.py  features.py  inference.py  metrics.py  model.py  train.py
src/audio_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_data.py  test_metrics.py
